# qlsa-tsp-parallel

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  codex.md
cmake/: CTestSetDefaultConfig.cmake
configs/: fair_experiment_matrix.json  island_ablation_matrix.json  large_tsplib_instances.json  targeted_quality_configs.json  tuned_params.json
data/: README.md
docs/: final_experiment_summary.md  final_report_v2.md  final_report_v3_format_notes.md  final_report_v4.md  personal_report_appendix.md  step1_design.md  step3_openmp_design.md  step4_cuda_design.md  step5_berlin52_analysis.md  step6A_openmp_scaling_analysis.md
docs/archive/: final_known_issues.md  final_report.md  final_report_archived.md  final_report_v2_review_notes.md  final_report_v3.md  final_report_v3_pdf_notes.md  final_submission_checklist.md  final_submission_readme.md
docs/dev/: code_quality_review.md  convergence_analysis.md  cuda_candidate_hybrid_quick_analysis.md  cuda_candidate_policy_analysis.md  cuda_candidate_policy_design.md  cuda_candidate_policy_formal_analysis.md  cuda_nsight_profile_analysis.md  cuda_nsight_profile_deep_analysis.md  extreme_audit.md  final_hard_targeted_analysis.md  final_hard_tuned_validation_analysis.md  final_large_all_openmp_analysis.md  final_representative_openmp_analysis.md  large_instance_data_status.md  openmp_scaling_final_analysis.md  paper_mechanism_alignment.md  policy_comparison_analysis.md  qlsa_variant_alignment_analysis.md  qlsa_variant_design.md  step2_design.md  step5_analysis.md  step5_multi_cpu_analysis.md  step6A_tuning_analysis.md  step6B_tuned_validation_analysis.md  step6C_targeted_quality_analysis.md
docs/final/: OPUS_AUDIT.md  PROJECT_STRUCTURE.md  REPORT_MANIFEST.md  final_report_course.md  final_report_course_rewrite.md  final_report_course_rewrite_v2.md  final_report_master.md  final_report_master_v2.md  final_report_public.md  known_limitations.md  personal_report.md  personal_report_appendix.md  reproduction_commands.md
docs/final_report_v5_package/: DATA_NOTE.md
docs/logs/: CHANGELOG.md
figures/: report_figure_manifest.json
include/tsp/: cuda.hpp  distance_matrix.hpp  instance.hpp  island.hpp  metrics.hpp  mpi_parallel.hpp  parallel.hpp  qlsa.hpp  rng.hpp  sa.hpp  timer.hpp  tour.hpp  tsplib_parser.hpp
python_ref/: README.md  qlsa_paper.py  run_python_baseline.py  sa_paper.py  sb_qlsa_paper.py  tsplib_loader.py
results/: berlin52_summary.csv  pa_final_text.txt
results/archive/: final_index_old.md
results/final/: RESULTS_INDEX.md  cuda_candidate_a280_nsight_summary.md  fair_island_clean_run_provenance.csv  large_instance_download_status.csv  large_instance_inventory.csv
results/raw/: baseline_sa.csv  berlin52_manual_raw.csv  core_optimization_benchmark_raw.csv  cuda_candidate_hybrid_quick_raw.csv  cuda_candidate_policy_formal_raw.csv  cuda_candidate_policy_quick_raw.csv  cuda_qlsa_candidate_raw.csv  cuda_scaling.csv  final_all_data_instances.txt  final_all_data_openmp_raw.csv  final_hard_targeted_raw.csv  final_hard_tuned_validation_raw.csv  final_large_all_openmp_raw.csv  large_cuda_formal_raw.csv  large_mpi_vm_formal_aggressive_raw.csv  large_openmp_l1_raw.csv  omp_scaling.csv  openmp_scaling_final_raw.csv  openmp_scaling_grid_raw.csv  policy_comparison_raw.csv  qlsa_variant_alignment_raw.csv  step5_berlin52_raw.csv  step5_multi_cpu_raw.csv  step5_raw.csv  targeted_quality_raw.csv  tuned_validation_raw.csv  tuning_raw.csv
results/reference/: qlearning_paper_text.txt
results/summary/: core_optimization_benchmark_summary.csv  cuda_candidate_hybrid_quick_summary.csv  cuda_candidate_policy_formal_summary.csv  cuda_candidate_policy_quick_summary.csv  cuda_candidate_sweep_aggressive_summary.csv  cuda_qlsa_candidate_summary.csv  cuda_reversal_summary.csv  fair_paired_eil76_friedman.csv  fair_paired_eil76_pairwise.csv  fair_paired_eil76_summary.csv  final_hard_targeted_summary.csv  final_hard_tuned_validation_summary.csv  (+20 more)
scripts/: analyze_all_data_openmp.py  analyze_cuda_candidate.py  analyze_cuda_candidate_sweep.py  analyze_cuda_qlsa_candidate.py  analyze_cuda_reversal.py  analyze_island_ablation.py  analyze_large_cuda.py  analyze_large_mpi_vm.py  analyze_large_openmp.py  analyze_mpi_smoke.py  analyze_paired_experiments.py  analyze_policy_comparison.py  analyze_qlsa_variant_experiments.py  analyze_results.py  analyze_targeted_quality.py  analyze_tuned_validation.py  analyze_tuning.py  benchmark_core_optimizations.py  check_figure_text_language.py  check_final_submission.py  check_privacy_and_encoding.py  check_report_assets.py  check_report_format.py  download_large_tsplib_subset.py  download_tsplib_subset.sh  estimate_large_instance_cost.py  experiment_csv.py  make_course_report_figures.py  make_hpc_architecture_figure.py  make_report_figures.py  mpi_csv.py  plot_convergence_traces.py  prepare_large_tsplib.py  report_figure_manifest.py  run_baseline.sh  run_convergence_traces.py  run_cuda_candidate_experiments.py  run_cuda_candidate_sweep.py  run_cuda_nsight_profile.py  run_cuda_reversal_experiments.py  (+25 more)
src/: cuda.cpp  cuda_kernels.cu  distance_matrix.cpp  island.cpp  main.cpp  metrics.cpp  mpi_main.cpp  mpi_parallel.cpp  parallel.cpp  qlsa.cpp  rng.cpp  sa.cpp  timer.cpp  tour.cpp  tsplib_parser.cpp
submission/: README.md  final_report.md  personal_report_appendix.md
tests/: CMakeLists.txt  run_test_executable.cmake  test_core_optimization_benchmark.py  test_cuda.cpp  test_cuda_candidate.cpp  test_cuda_qlsa_candidate.cpp  test_experiment_csv.py  test_fair_analyzer_integrity.py  test_fair_experiment_pipeline.py  test_fair_runner_validation.py  test_island.cpp  test_island_ablation_pipeline.py  test_island_analyzer_hardening.py  test_island_runner_hardening.py  test_mpi_parallel.cpp  test_mpi_smoke_schema.py  test_parallel.cpp  test_qlsa_paper_lite.cpp  test_qlsa_variant_analysis.py  test_qlsa_variant_runner.py  test_report_figure_manifest.py  test_small_instance.cpp
tests/fixtures/: asymmetric_full_matrix3.tsp  atsp3.tsp  duplicate_node_ids4.tsp  missing_node_id4.tsp  out_of_range_node_id4.tsp  square4.tsp
(+16 files in other folders)
